[gd_scene load_steps=11 format=3 uid="uid://b7wa2n7d0dfkp"]

[ext_resource type="Script" uid="uid://b5qi42nmnwsjx" path="res://src/scripts/playerscripts/RangerPlayer.gd" id="1_rkl73"]
[ext_resource type="PackedScene" uid="uid://7yqsmb8rlqdl" path="res://src/scenes/gameplayscenes/Bullet.tscn" id="2_7q8dk"]
[ext_resource type="Texture2D" uid="uid://k38ru1yn5as5" path="res://src/assets/FighterCharacter.png" id="2_d7q17"]
[ext_resource type="Script" uid="uid://dgjjb82suvscb" path="res://src/scripts/HealthComponent.gd" id="3_gfmhh"]
[ext_resource type="Script" uid="uid://bqsw4sdl65ilw" path="res://src/scripts/HitboxComponent.gd" id="4_ci0ff"]
[ext_resource type="Script" uid="uid://bev0dwxmfmofp" path="res://src/scripts/playerscripts/RangerCamera.gd" id="5_7q8dk"]
[ext_resource type="PackedScene" uid="uid://dge4gtm50pdju" path="res://src/scenes/playerscenes/PlayerUI.tscn" id="7_kedvh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rkl73"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fcnqf"]
radius = 15.0333

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_7q8dk"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="RangerPlayer" type="CharacterBody2D"]
script = ExtResource("1_rkl73")
bullet = ExtResource("2_7q8dk")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("2_d7q17")

[node name="PhysicsBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rkl73")
debug_color = Color(0.724014, 0.477071, 0.0157364, 0.42)

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_gfmhh")
metadata/_custom_type_script = "uid://dgjjb82suvscb"

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("4_ci0ff")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://bqsw4sdl65ilw"

[node name="BulletBox" type="CollisionShape2D" parent="HitboxComponent"]
visible = false
shape = SubResource("CircleShape2D_fcnqf")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(15, 0)

[node name="ShotCooldownTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("5_7q8dk")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_7q8dk")

[node name="PlayerUI" parent="." instance=ExtResource("7_kedvh")]

[connection signal="timeout" from="ShotCooldownTimer" to="." method="_on_shot_cooldown_timer_timeout"]
